<resources>
    <string name="app_name">BtGattDemo</string>
    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="bluetooth_turning_on">Bluetooth turning on</string>
    <string name="bluetooth_turning_off">Bluetooth turning off</string>
    <string name="bluetooth_not_available">Bluetooth not available</string>
    <string name="ble_not_supported">Bluetooth LE not supported</string>
    <string name="unknown_device">Unknown device</string>
    <string name="bluetooth_is_available_to_use">Bluetooth is available to use</string>
    <string name="read">Read</string>
    <string name="read_property_indicate">Read property: indicate</string>
    <string name="read_property_nil">Read property: nil</string>
    <string name="read_property_notify">Read property: notify</string>
    <string name="write">Write</string>
    <string name="write_no_response">Write no response</string>
    <string name="write_property_write">Write property: write</string>
    <string name="write_property_nil">Write property: nil</string>
    <string name="write_property_write_no_response">Write property: write no response</string>
    <string name="device_name">Device name</string>
    <string name="disconnected">Disconnected</string>
    <string name="device_services">Device services</string>
    <string name="start_test">Start test</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="no_read_characteristic">No read characteristic</string>
    <string name="no_write_characteristic">No write characteristic</string>
    <string name="notify">Notify</string>
    <string name="indicate">Indicate</string>
    <string name="bluetooth_is_not_supported">Bluetooth is not supported</string>
    <string name="bt_ads_not_supported">Bluetooth advertisements are not supported</string>
    <string name="start_error_prefix">Start advertising failed: </string>
    <string name="start_error_already_started">Already started.</string>
    <string name="start_error_too_large">Data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">Not supported on this device.</string>
    <string name="start_error_internal">Internal error.</string>
    <string name="start_error_too_many">Too many advertisers.</string>
    <string name="start_error_unknown">Unknown error</string>
    <string name="ble_device_scan">BLE device scan</string>
    <string name="bluetooth_le">Bluetooth LE</string>
    <string name="test">Test</string>
    <string name="data_received">"Data received "</string>
    <string name="clear">Clear</string>
    <string name="data_to_send">"Data to send "</string>
    <string name="input_here">Input here</string>
    <string name="zero_to_six">0123456</string>
    <string name="default_str">Default</string>
    <string name="send">Send</string>
    <string name="clear_test_log">Clear test log</string>
    <string name="refresh">Refresh</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
</resources>