<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bluetooth_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_is_available_to_use"
        android:textColor="@color/blue"
        android:textSize="12sp"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>



    <TextView
        android:id="@+id/read_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_property_nil"
        android:textColor="@color/red"
        android:textSize="12sp"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>


    <TextView
        android:id="@+id/write_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_property_nil"
        android:textColor="@color/red"
        android:textSize="12sp"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray"
        android:layout_marginTop="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/notify"
            android:id="@+id/notify"
            android:onClick="onClick"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/write"
            android:id="@+id/write"
            android:onClick="onClick"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/indicate"
            android:id="@+id/indicate"
            android:onClick="onClick"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/write_no_response"
            android:id="@+id/write_no_response"
            android:onClick="onClick"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/start_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

</LinearLayout>
