<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/device_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/connect_state"
            android:text="@string/device_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/connect_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/disconnected"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/device_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_info"
        android:text="4F:F1:9d:73:1b:74"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/device_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_address"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/device_services"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/services_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_test"
        android:layout_below="@+id/device_services" />

    <Button
        android:id="@+id/start_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        android:text="@string/start_test"
        android:textAllCaps="false" />
</RelativeLayout>
